Add caff create endpoint
