# lawless/src/main/resources/swagger-ui/swagger.json
@@ -7,6 +7,8 @@
   },
   "tags" : [ {
     "name" : "Auth"
+  }, {
+    "name" : "Caff"
   } ],
   "paths" : {
     "/api/auth/login" : {
@@ -28,6 +30,22 @@
             "description" : "successful operation",
             "schema" : {
               "$ref" : "#/definitions/LoginResp"
+            }
+          }
+        }
+      }
+    },
+    "/api/auth/me" : {
+      "get" : {
+        "tags" : [ "Auth" ],
+        "summary" : "Get the user",
+        "description" : "",
+        "operationId" : "me",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/UserResp"
             }
           }
         }
@@ -56,9 +74,60 @@
           }
         }
       }
+    },
+    "/api/caff/create" : {
+      "post" : {
+        "tags" : [ "Caff" ],
+        "summary" : "Create and process caff ",
+        "description" : "",
+        "operationId" : "create",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/CreateCaffReq"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/CreateCaffResp"
+            }
+          }
+        }
+      }
     }
   },
   "definitions" : {
+    "CreateCaffReq" : {
+      "type" : "object",
+      "properties" : {
+        "name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "price" : {
+          "type" : "number",
+          "format" : "double"
+        },
+        "caffFile" : {
+          "type" : "file"
+        }
+      }
+    },
+    "CreateCaffResp" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        }
+      }
+    },
     "LoginReq" : {
       "type" : "object",
       "properties" : {
@@ -81,6 +150,12 @@
         },
         "userPersonalData" : {
           "$ref" : "#/definitions/UserPersonalData"
+        },
+        "roles" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/Role"
+          }
         }
       }
     },
@@ -103,6 +178,15 @@
         }
       }
     },
+    "Role" : {
+      "type" : "object",
+      "properties" : {
+        "name" : {
+          "type" : "string",
+          "enum" : [ "ROLE_USER", "ROLE_ADMIN" ]
+        }
+      }
+    },
     "UserPersonalData" : {
       "type" : "object",
       "properties" : {
@@ -117,6 +201,20 @@
         },
         "lastName" : {
           "type" : "string"
+        }
+      }
+    },
+    "UserResp" : {
+      "type" : "object",
+      "properties" : {
+        "userPersonalData" : {
+          "$ref" : "#/definitions/UserPersonalData"
+        },
+        "roles" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/Role"
+          }
         }
       }
     }
